--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,8 +1,8 @@
-{% if page.mathjax %}
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
-      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      inlineMath: [ ['$','$'], ['\(, '\)'] ],
+      displayMath: [ ['$$','$$'] ],
       processEscapes: true
     }
   });
@@ -13,10 +13,3 @@
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
 >
 </script>
-<script
-  type="text/javascript"
-  charset="utf-8"
-  src="https://vincenttam.github.io/javascripts/MathJaxLocal.js"
->
-</script>
-{% endif %}
