--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
 
    <!-- support the MathJax if necessary -->
     {% if page.use_math %}
-      {% include mathjax_support %}
+      {% include mathjax.html %}
     {% endif %}
   
 </head>
